--- a/小动画效果/animation-main.html
+++ b/小动画效果/animation-main.html
@@ -16,8 +16,12 @@
     <div class="fade-in-and-out-text">
         这条文本会先淡入后淡出
     </div>
+    <div class="up-and-fade-in-text">
+        这条文本会向上浮现出来
+    </div>
     <div class="hover-highlight" style="padding: 4px; margin: 12px;">
         这个元素在鼠标放在上面的时候会变大
     </div>
+
 </body>
 </html>
