--- a/整体框架例子/framework.html
+++ b/整体框架例子/framework.html
@@ -12,10 +12,14 @@
         <div id="name">
             这是说话的人
         </div>
+        下面这个是说话的那个人的头：
+        <div>
+            <img src="./images/test-head-img.jpg" alt="" id="head-image" style="width: 100px;height: 100px;">
+        </div>
         <div id="text">
             这是测试的文本
         </div>
-        <div><img src="./images/test-head-img.jpg" alt="" id="image" style="width: 100px;height: 100px;"></div>
+        <div><img src="./images/test-head-img.jpg" alt="" id="image" style="width: 200px;height: 200px;"></div>
         <div style="display: flex;justify-content: center;flex-direction: row;">
             <button id="button-forward">
                 上一个
