--- a/整体框架例子/example-site.html
+++ b/整体框架例子/example-site.html
@@ -14,6 +14,7 @@
 </body>
 <script>
     $(document).ready(function(){
+        //import currentIndex from "./js/framework.js";
         $("#back").click(function(){
             goBackAndNext();
         })
